syntax = "proto3";

option csharp_namespace = "Authenticator.API.Services";

package authenticator;

service Authenticator
{
	rpc Login(LoginRequest) returns (LoginResponse);
	rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest
{
	string email = 1;
	string password = 2;
}

message LoginResponse
{
	enum LoginStatus
	{
		FAILED = 0;
		WRONG_EMAIL = 1;
		WRONG_PASSWORD = 2;
		SUCCEED = 3;
	}

	LoginStatus login_status = 1;
}

message RegisterRequest
{
	string email = 1;
	string password = 2;
	string first_name = 3;
	string last_name = 4;
}

message RegisterResponse
{
	enum RegistrationStatus
	{
		FAILED = 0;
		EMAIL_ALREADY_IN_USE = 1;
		CREATED = 2;
	}

	RegistrationStatus registration_status = 1;
}